[gd_scene load_steps=2 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]

[node name="Player" type="VBoxContainer"]
margin_right = 124.0
margin_bottom = 92.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Simulate" type="Button" parent="."]
margin_right = 124.0
margin_bottom = 20.0
text = "Simulate 1gen"

[node name="Playstop" type="Button" parent="."]
margin_top = 24.0
margin_right = 124.0
margin_bottom = 44.0
toggle_mode = true
text = " Play/Stop"

[node name="Paint" type="Button" parent="."]
margin_top = 48.0
margin_right = 124.0
margin_bottom = 68.0
toggle_mode = true
text = "Paint Cells"

[connection signal="button_down" from="Simulate" to="." method="_on_Simulate_button_down"]
[connection signal="toggled" from="Playstop" to="." method="_on_Playstop_toggled"]
[connection signal="toggled" from="Paint" to="." method="_on_Paint_toggled"]
